Fix Java 8 build and restore repository tests to 100% green
- RequestHelper: backport String.isBlank() (a Java 11 API) to trim().isEmpty()
  so the project compiles on real Java 8 as declared in pom.xml.
- ers_script.sql: correct seed-data drift so the repository integration tests
  pass against a fresh Postgres load: request #1 requester 3->2, remove the
  stray req3 supervisor_approval row, and reorder employee 4's hierarchy rows.

No DDL/schema or application-logic changes; table definitions and all tests
are untouched. Verified: 75/75 tests pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>